--- a/index.html
+++ b/index.html
@@ -9,23 +9,35 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Sans+TC:wght@400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Noto+Sans+TC:wght@400;500;600;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div class="bg-glow"></div>
     <div class="app">
         <!-- Header -->
         <header class="header">
-            <h1>📦 叫貨系統</h1>
+            <h1>叫貨系統</h1>
             <p class="header-subtitle">智慧評估 · 精準叫貨</p>
+            <div class="header-date" id="todayLabel"></div>
         </header>
 
-        <!-- Tab Navigation -->
-        <nav class="tab-nav" id="tabNav">
-            <button class="tab-btn active" data-tab="milk">🥛 牛奶</button>
-            <button class="tab-btn" data-tab="icecream">🍦 冰淇淋</button>
+        <!-- Tab Buttons — Card Style -->
+        <nav class="tab-cards" id="tabNav">
+            <button class="tab-card active" data-tab="milk">
+                <div class="tab-card-icon">🥛</div>
+                <div class="tab-card-label">牛奶叫貨</div>
+                <div class="tab-card-desc">每週兩次配送</div>
+                <div class="tab-card-glow"></div>
+            </button>
+            <button class="tab-card" data-tab="icecream">
+                <div class="tab-card-icon">🍦</div>
+                <div class="tab-card-label">冰淇淋叫貨</div>
+                <div class="tab-card-desc">每月兩次配送</div>
+                <div class="tab-card-glow"></div>
+            </button>
         </nav>
 
         <!-- ==================== MILK TAB ==================== -->
@@ -135,10 +147,9 @@
                 </div>
             </section>
 
-            <section class="form-section">
+            <section class="form-section ic-form">
                 <h2 class="section-title">🍦 輸入冰淇淋庫存與用量</h2>
                 <form id="icOrderForm" autocomplete="off">
-                    <!-- 香草粉 -->
                     <div class="product-group">
                         <div class="product-header">
                             <span class="product-icon">🍨</span>
@@ -173,7 +184,6 @@
                         </div>
                     </div>
 
-                    <!-- 保久乳 -->
                     <div class="product-group">
                         <div class="product-header">
                             <span class="product-icon">🥛</span>
@@ -206,7 +216,6 @@
                         </div>
                     </div>
 
-                    <!-- 安全庫存 -->
                     <div class="form-group">
                         <label for="icSafetyDays">安全庫存天數</label>
                         <div class="input-wrapper">
@@ -222,7 +231,6 @@
                 </form>
             </section>
 
-            <!-- Ice cream results -->
             <section class="results-section" id="icResultsSection" style="display:none;">
                 <h2 class="section-title">📦 冰淇淋叫貨建議</h2>
                 <div class="ic-schedule-card" id="icScheduleCard"></div>
@@ -232,7 +240,7 @@
         </div>
 
         <footer class="footer">
-            <p>叫貨系統 v2.0 &middot; 今天是 <span id="todayLabel"></span></p>
+            <p>叫貨系統 v2.0</p>
         </footer>
     </div>
 
